2019-12-22  Karl Berry  <karl@freefriends.org>

	* doc/kpathsea.texi (Path searching): mention translations for TL.
	(Config files): distinguish special characters at different levels.
	(Filename database): don't mention talking about 8.3 filenames.
	
2019-12-16  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (glob_str_size): increase from 20,000 to 200,000
	for web2c/tests/bibtex-bigauth.test (q.v.).
	(ent_str_size, max_strings.bibtex*): increase these while we're here.

2019-11-03  Karl Berry  <karl@tug.org>

	* progname.c: remove nowadays-useless register declarations.
	Mentioned by Doug McKenna.

2019-10-10  Karl Berry  <karl@tug.org>

	* texmf.cnf (LUAINPUTS.luahblatex{,-dev}): define a la other
	LUAINPUTS.*. Report from Marcel Fabian Krueger, 10 Oct 2019 23:08:37.

2019-09-04  Akira Kakuto  <kakuto@w32tex.org>

	* hash.c: Typo in a comment.

2019-08-13  Karl Berry  <karl@freefriends.org>

	* cnf.c (do_line): warn about a program name qualifier which is
	empty or contains one of our usual special characters: .{}$;:
	since it is probably a misparsing, especially if the = is omitted.
	Report from Johannes Kunde, 1 Aug 2019 20:57:14.
	* Makefile.am (TESTS): new tests/cnfprog.test
	(cnfprog.log): another target for kpsewhich.
	(EXTRA_DIST): add tests/cnfprog/texmf.cnf.
	* doc/kpathsea.texi (Config files): mention example of above.

2019-08-09  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (log_openout): new configuration variable, true
	by default for all but tex and initex, to remove one technical
	trip incompatibility. Report from David Fuchs.

	* cnf.c,
	* progname.h,
	* tex-file.c,
	* types.h: doc/formatting fixes.

2019-08-06  Karl Berry  <karl@freefriends.org>

	* kpsewhich.c (USAGE, read_command_line): new option --cnf-line.
	(user_cnf_lines, user_cnf_nlines): new variables to store the args.
	(init_more): call kpathsea_cnf_line_env_progname on each line.

	* cnf.h (kpathsea_cnf_line_env_progname): declare new fn.