@@ -1,11 +1,0 @@
-# mktexdir.opt to determine various manipulations of the filenames.
-# Sourced from mktexdir.
-# 
-# Originally written by Thomas Esser.
-# Public domain.
-# $Id$
-
-# Set append-only bit on created directories.
-case "$MT_FEATURES" in
-  *appendonlydir*) MT_APPEND_MASK=+t;;
-esac
